created final repo for deployment

--- a/views/singlecommment.handlebars
+++ b/views/singlecommment.handlebars
@@ -1,10 +1,10 @@
 <div class = "comment">
     {{#each comment}}
-    <section class = "comment card">
-        <div class = "card-body">
+    <section class = "card">
+        <div class = "card-header flex-row justify-space-between">
             {{user.username}}
         </div>
-            <div>
+            <div class = 'card-body'>
                 {{body}}
             </div>
         </section>
